# practica-io-2

./: .gitignore  README.md  pyproject.toml
episodic-racing/: main.ipynb  mc_agent.py  racetrack_utils.py
episodic_racing/: racetrack_env.py  racetrack_utils.py
face-morphing/: face_detector.py  main.ipynb  morphing.py
parte_1/: main.ipynb
