[project]
name = "practica-io-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "mediapipe>=0.10.31",
    "numpy>=2.4.0",
    "opencv-python>=4.11.0.86",
    "pillow>=12.1.0",
    "pot>=0.9.6.post1",
    "scikit-image>=0.26.0",
    "scipy>=1.16.3",
]
